Set grid, add nav components.

--- a/index.html
+++ b/index.html
@@ -3,86 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <div class="header-div top-half">
-            <div id="search-bar-div">
-                <img src="img/horse-human.png" alt="a-b testing">
-                <input type="text" name="search">
-            </div>
-            <div id="top-right-icons-div">
-                <img src="img/notification.png" alt="notification icon">
-                <img src="img/horse-human.png" alt="horse icon">
-                <h2>Aaron Webb</h2>
-            </div>
-        </div>
-        <div class="header-div bottom-half">
-            <div id="name-div">
-                <img src="img/beekeeper.png" alt="beekeeper">
-                <div id="text-div">
-                    <p>hi, it's</p>
-                    <h1>Aaron Webb @aaron</h1>
-                </div>
-            </div>
-            <div id="btns-div">
 
-            </div>
-        </div>
+
+    <header>
     </header>
 
-    <div id="side-bar">
-        <div id="top-group-wrapper">
-            <div id="icon-div">
-                <!-- img -->
-                 <h2>Dashboard</h2>
+
+    <nav>
+        <div id="nav-dashboard-div" class="nav">
+            <img src="img/horse-human.png" alt="horse human">
+            <h1>Dashboard</h1>
+        </div>
+
+        <div id="nav-home-div">
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">Home</a></h3>
+            </div>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">Profile</a></h3>
+            </div>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">Messages</a></h3>
+            </div>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">History</a></h3>
+            </div>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">Tasks</a></h3></div>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3><a target="_blank" href="https://google.com">Communities</a></h3>
             </div>
         </div>
-        <div id="middle-group-wrapper">
-            <div id="home-div">
-                <!-- img -->
-                 <h3>Home</h3>
+
+        <div id="nav-settings-div">
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3>Settings</h3>
             </div>
-            <div id="profile-div">
-                <!-- img -->
-                 <h2>Profile</h2>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3>Support</h3>
             </div>
-            <div id="messages-div">
-                <!-- img -->
-                 <h2>Messages</h2>
-            </div>
-            <div id="history-div">
-                <!-- img -->
-                 <h2>History</h2>
-            </div>
-            <div id="tasks-div">
-                <!-- img -->
-                 <h2>Tasks</h2>
-            </div>
-            <div id="Communities-div">
-                <!-- img -->
-                 <h2>Communities</h2>
+            <div class="nav-item-div">
+                <img src="img/beekeeper.png" alt="bee">
+                <h3>Privacy</h3>
             </div>
         </div>
-        <div id="third-group-wrapper">
-            <div id="Settings-div">
-                <!-- img -->
-                 <h2>Settings</h2>
-            </div>
-            <div id="Support-div">
-                <!-- img -->
-                 <h2>Support</h2>
-            </div>
-            <div id="Privacy-div">
-                <!-- img -->
-                 <h2>Privacy</h2>
-            </div>
-        </div>
-    </div>
+    </nav>
     <main>
-        
+
     </main>
+    
 </body>
 </html>
