Add top half header.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 </head>
 <body>
 
-
     <header>
+        <div id="top-half">
+            <div id="left">
+                <img src="img/magnify.png" alt="magnifying glass">
+                <input type="text">
+            </div>
+
+            <div id="right">
+                <img src="img/notification.png" alt="bell icon">
+                <img src="img/account.png" alt="account icon">
+                <h2>Leonardo DaVinci</h2>
+            </div>
+        </div>
+
+
+
+        <div id="bottom-half"></div>
     </header>
+
+
 
 
     <nav>
@@ -60,6 +77,11 @@
             </div>
         </div>
     </nav>
+
+
+
+
+
     <main>
 
     </main>
