--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
 
 
 
-        <div id="bottom-half"></div>
+        <div id="bottom-half">
+            <div id="left">
+                <div id="left-img-div">
+                    <img src="img/account.png" alt="account">
+                </div>
+                <div id="left-text-div">
+                    <p>Hi there,</p>
+                    <h2>Leonardo DaVinci (@leo)</h2>
+                </div>
+            </div>
+
+            <div id="right">
+                <button id="new-btn">New</button>
+                <button id="upload-btn">Upload</button>
+                <button id="share-btn">Share</button>
+            </div>
+        </div>
     </header>
 
 
