--- a/index.html
+++ b/index.html
@@ -99,6 +99,24 @@
 
 
     <main>
+        <div id="left">
+            <div id="main-title-div">
+                <h2>Your Projects</h2>
+            </div>
+            <div id="gallery-div">
+                <div class="panel" id="panel1"></div>
+                <div class="panel" id="panel2"></div>
+                <div class="panel" id="panel3"></div>
+                <div class="panel" id="panel4"></div>
+                <div class="panel" id="panel5"></div>
+                <div class="panel" id="panel6"></div>
+            </div>
+        </div>
+
+        <div id="right">
+            <div id="top"></div>
+            <div id="bottom"></div>
+        </div>
 
     </main>
     
