Finish announcements section.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,30 @@
         </div>
 
         <div id="right">
-            <div id="top"></div>
+            <div id="top">
+                <div id="top-title-div">
+                    <h2>Announcements</h2>
+                </div>
+                <div id="announcement-board-div">
+                    <div class="announcement" id="first">
+                        <h3>Site maintainence</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio. Why did i delete the beautiful latin?</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Community share day</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="announcement">
+                        <h3>Updated privacy policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio.</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
             <div id="bottom"></div>
         </div>
 
