--- a/index.html
+++ b/index.html
@@ -134,11 +134,8 @@
                 </div>
             </div>
 
-
-
-
-
-            <div id="bottom"></div>
+            <div id="bottom">
+            </div>
         </div>
 
     </main>
