Finish all components.

--- a/index.html
+++ b/index.html
@@ -113,28 +113,69 @@
             </div>
         </div>
 
-        <div id="right">
-            <div id="top">
-                <div id="top-title-div">
-                    <h2>Announcements</h2>
-                </div>
-                <div id="announcement-board-div">
-                    <div class="announcement" id="first">
-                        <h3>Site maintainence</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio. Why did i delete the beautiful latin?</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Community share day</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                    <div class="announcement">
-                        <h3>Updated privacy policy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio.</p>
-                    </div>
-                </div>
+        <div id="top-right">
+
+            <div id="top-title-div">
+                <h2>Announcements</h2>
             </div>
 
-            <div id="bottom">
+            <div id="announcement-board-div">
+                <div class="announcement" id="first">
+                    <h3>Site maintainence</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio. Why did i delete the beautiful latin?</p>
+                </div>
+                <div class="announcement">
+                    <h3>Community share day</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="announcement">
+                    <h3>Updated privacy policy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente veritatis odio quo animi qui reiciendis accusamus repellat autem optio.</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="bottom-right">
+            <div id="bottom-title-div">
+                <h2>Trending</h2>
+            </div>
+            <div id="trending">
+                <div class="trending">
+                    <div>
+                        <img src="img/account.png" alt="account">
+                    </div>
+                    <div>
+                        <p>@teagan</p>
+                        <h3>World stomper</h3>
+                    </div>
+                </div>
+                <div class="trending">
+                    <div>
+                        <img src="img/horse-human.png" alt="account">
+                    </div>
+                    <div>
+                        <p>@williams</p>
+                        <h3>Williams stomper</h3>
+                    </div>
+                </div>
+                <div class="trending">
+                    <div>
+                        <img src="img/beekeeper.png" alt="account">
+                    </div>
+                    <div>
+                        <p>@fruits</p>
+                        <h3>Strawberry eater</h3>
+                    </div>
+                </div>
+                <div class="trending">
+                    <div>
+                        <img src="img/magnify.png" alt="account">
+                    </div>
+                    <div>
+                        <p>@whyknot</p>
+                        <h3>World stomper</h3>
+                    </div>
+                </div>
             </div>
         </div>
 
