Finish panels, media queries.

--- a/index.html
+++ b/index.html
@@ -104,12 +104,95 @@
                 <h2>Your Projects</h2>
             </div>
             <div id="gallery-div">
-                <div class="panel" id="panel1"></div>
-                <div class="panel" id="panel2"></div>
-                <div class="panel" id="panel3"></div>
-                <div class="panel" id="panel4"></div>
-                <div class="panel" id="panel5"></div>
-                <div class="panel" id="panel6"></div>
+                <div class="panel" id="panel1">
+                    <div class="panel-content-div">
+                        <h3>
+                            <strong>Super Cool Content</strong>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo natus similique temporibus aperiam. This content can be longer.
+                        </p>
+                    </div>
+                    <div class="panel-icons-div">
+                        <img src="img/account.png" alt="account">
+                        <img src="img/beekeeper.png" alt="beekeeper">
+                        <img src="img/horse-human.png" alt="horse human">
+                    </div>
+                </div>
+                <div class="panel" id="panel2">
+                    <div class="panel-content-div">
+                        <h3>
+                            <strong>Super Baller Content</strong>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo natus similique temporibus aperiam. This content can be longer. Like a lot lot longer and all that.
+                        </p>
+                    </div>
+                    <div class="panel-icons-div">
+                        <img src="img/account.png" alt="account">
+                        <img src="img/beekeeper.png" alt="beekeeper">
+                        <img src="img/horse-human.png" alt="horse human">
+                    </div>
+                </div>
+                <div class="panel" id="panel3">
+                    <div class="panel-content-div">
+                        <h3>
+                            <strong>Super Sweet Content</strong>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                    <div class="panel-icons-div">
+                        <img src="img/account.png" alt="account">
+                        <img src="img/beekeeper.png" alt="beekeeper">
+                        <img src="img/horse-human.png" alt="horse human">
+                    </div>
+                </div>
+                <div class="panel" id="panel4"><div class="panel-content-div">
+                    <h3>
+                        <strong>Super Above Average Content</strong>
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo natus similique temporibus aperiam. This content can be longer.
+                    </p>
+                </div>
+                <div class="panel-icons-div">
+                    <img src="img/account.png" alt="account">
+                    <img src="img/beekeeper.png" alt="beekeeper">
+                    <img src="img/horse-human.png" alt="horse human">
+                </div>
+            </div>
+                <div class="panel" id="panel5">
+                    <div class="panel-content-div">
+                        <h3>
+                            <strong>Super Excellent Content</strong>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo natus similique temporibus aperiam. This content can be longer.
+                        </p>
+                    </div>
+                    <div class="panel-icons-div">
+                        <img src="img/account.png" alt="account">
+                        <img src="img/beekeeper.png" alt="beekeeper">
+                        <img src="img/horse-human.png" alt="horse human">
+                    </div>
+                </div>
+                <div class="panel" id="panel6">
+                    <div class="panel-content-div">
+                        <h3>
+                            <strong>Super Opposite of Lame Content</strong>
+                        </h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem explicabo natus similique temporibus aperiam. This content can be longer.
+                        </p>
+                    </div>
+                    <div class="panel-icons-div">
+                        <img src="img/account.png" alt="account">
+                        <img src="img/beekeeper.png" alt="beekeeper">
+                        <img src="img/horse-human.png" alt="horse human">
+                    </div>
+                </div>
             </div>
         </div>
 
